examreportforexam02on28012017020058/2-1-inter.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r7p9.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Jan 27 21:47:40 PST 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam02/exam_20170128/rfleming

= Git history ==================================================================
$> git -C /var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user log --pretty='%H - %an, %ad : %s'
a01faf94ee3876bb4734b3b37ea5744952657f23 - Exam 42, Fri Jan 27 21:47:22 2017 -0800 : i can't get this third string array working on either union or inter
7b9c4745491154ead1f449f80abbd9b67075230e - Exam 42, Fri Jan 27 21:33:39 2017 -0800 : not happening
f666fbe3aac7c832425afe0644a0f9f36ba28a19 - Exam 42, Fri Jan 27 18:38:38 2017 -0800 : my lucky day
f1c9acda6362ca629a4fd95c57041b3dcc61dd69 - Exam 42, Fri Jan 27 18:33:43 2017 -0800 : a little ugly but working fine
 
= Collected files ==========================================
$> ls -lAR /var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user
total 8
-rw-r--r--  1 deepthought  deepthought  1062 Jan 27 21:47 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jan 27 21:47 aff_a
drwxr-xr-x  3 deepthought  deepthought   102 Jan 27 21:47 ft_swap
drwxr-xr-x  3 deepthought  deepthought   102 Jan 27 21:47 inter
drwxr-xr-x  3 deepthought  deepthought   102 Jan 27 21:47 union

/var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user/aff_a:
total 8
-rw-r--r--  1 deepthought  deepthought  1291 Jan 27 21:47 aff_a.c

/var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user/ft_swap:
total 8
-rw-r--r--  1 deepthought  deepthought  969 Jan 27 21:47 ft_swap.c

/var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user/inter:
total 8
-rw-r--r--  1 deepthought  deepthought  1467 Jan 27 21:47 inter.c

/var/folders/4r/8cgzxldd50x_279kkznm1cvc0000gp/T/tmpMk1MnW/user/union:
total 8
-rw-r--r--  1 deepthought  deepthought  1702 Jan 27 21:47 union.c
 
= inter ========================================================================
$> gcc -Wextra -Wall -Werror inter.c -o user_exe 
inter.c:51:14: error: invalid operands to binary expression ('int (char *, char)' and 'int')
                                included += c;
                                ~~~~~~~~ ^  ~
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
